Drop IdProviderFlow.DEFAULT: an absent flow list means no restriction
A concrete default set cannot be right: the effective default depends on
the connector, the XP version's managed flows, and the id provider app's
own choices for its informational flows. getIdProviderFlows now returns
null where no flow restriction is configured; XP-managed gates then pass,
and req.idProviderFlows stays absent so the id provider app applies its
own defaults. @NullMarked moved to the interface; all VirtualHost methods
documented.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01YFqoY5nKdmhXqM7MAU9cqU